gen/Rubito/rubitoParser.py
# Generated from C:/Users/lol11/Documents/~py-proj/rubito-emerald\rubito.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class rubitoParser ( Parser ):

    grammarFileName = "rubito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "','", "';'", "<INVALID>", 
                     "'require'", "'end'", "'def'", "'return'", "'if'", 
                     "'else'", "'elsif'", "'unless'", "'while'", "'retry'", 
                     "'break'", "'for'", "'true'", "'false'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'**'", "'=='", "'!='", "'>'", 
                     "'<'", "'<='", "'>='", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'**='", "'&'", "'|'", "'^'", "'~'", 
                     "'<<'", "'>>'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'['", "']'", "'nil'" ]

    symbolicNames = [ "<INVALID>", "LITERAL", "COMMA", "SEMICOLON", "CRLF", 
                      "REQUIRE", "END", "DEF", "RETURN", "IF", "ELSE", "ELSIF", 
                      "UNLESS", "WHILE", "RETRY", "BREAK", "FOR", "TRUE", 
                      "FALSE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "EXP", 
                      "EQUAL", "NOT_EQUAL", "GREATER", "LESS", "LESS_EQUAL", 
                      "GREATER_EQUAL", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "EXP_ASSIGN", 
                      "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "BIT_SHL", 
                      "BIT_SHR", "AND", "OR", "NOT", "LEFT_RBRACKET", "RIGHT_RBRACKET", 
                      "LEFT_SBRACKET", "RIGHT_SBRACKET", "NIL", "SL_COMMENT", 
                      "ML_COMMENT", "WS", "INT", "FLOAT", "ID", "ID_GLOBAL", 
                      "ID_FUNCTION" ]

    RULE_prog = 0
    RULE_expression_list = 1
    RULE_expression = 2
    RULE_global_get = 3
    RULE_global_set = 4
    RULE_global_result = 5
    RULE_function_inline_call = 6
    RULE_require_block = 7
    RULE_function_definition = 8
    RULE_function_definition_body = 9
    RULE_function_definition_header = 10
    RULE_function_name = 11
    RULE_function_definition_params = 12
    RULE_function_definition_params_list = 13
    RULE_function_definition_param_id = 14
    RULE_return_statement = 15
    RULE_function_call = 16
    RULE_function_call_param_list = 17
    RULE_function_call_params = 18
    RULE_function_param = 19
    RULE_function_unnamed_param = 20
    RULE_function_named_param = 21
    RULE_function_call_assignment = 22
    RULE_all_result = 23
    RULE_elsif_statement = 24
    RULE_if_elsif_statement = 25
    RULE_if_statement = 26
    RULE_unless_statement = 27
    RULE_while_statement = 28
    RULE_for_statement = 29
    RULE_init_expression = 30
    RULE_all_assignment = 31
    RULE_for_init_list = 32
    RULE_cond_expression = 33
    RULE_loop_expression = 34
    RULE_for_loop_list = 35
    RULE_statement_body = 36
    RULE_statement_expression_list = 37
    RULE_assignment = 38
    RULE_dynamic_assignment = 39
    RULE_int_assignment = 40
    RULE_float_assignment = 41
    RULE_string_assignment = 42
    RULE_initial_array_assignment = 43
    RULE_array_assignment = 44
    RULE_array_definition = 45
    RULE_array_definition_elements = 46
    RULE_array_selector = 47
    RULE_dynamic_result = 48
    RULE_dynamic = 49
    RULE_int_result = 50
    RULE_float_result = 51
    RULE_string_result = 52
    RULE_comparison_list = 53
    RULE_comparison = 54
    RULE_comp_var = 55
    RULE_lvalue = 56
    RULE_rvalue = 57
    RULE_break_expression = 58
    RULE_literal_t = 59
    RULE_float_t = 60
    RULE_int_t = 61
    RULE_bool_t = 62
    RULE_nil_t = 63
    RULE_id = 64
    RULE_id_global = 65
    RULE_id_function = 66
    RULE_terminator = 67
    RULE_else_token = 68
    RULE_crlf = 69

    ruleNames =  [ "prog", "expression_list", "expression", "global_get", 
                   "global_set", "global_result", "function_inline_call", 
                   "require_block", "function_definition", "function_definition_body", 
                   "function_definition_header", "function_name", "function_definition_params", 
                   "function_definition_params_list", "function_definition_param_id", 
                   "return_statement", "function_call", "function_call_param_list", 
                   "function_call_params", "function_param", "function_unnamed_param", 
                   "function_named_param", "function_call_assignment", "all_result", 
                   "elsif_statement", "if_elsif_statement", "if_statement", 
                   "unless_statement", "while_statement", "for_statement", 
                   "init_expression", "all_assignment", "for_init_list", 
                   "cond_expression", "loop_expression", "for_loop_list", 
                   "statement_body", "statement_expression_list", "assignment", 
                   "dynamic_assignment", "int_assignment", "float_assignment", 
                   "string_assignment", "initial_array_assignment", "array_assignment", 
                   "array_definition", "array_definition_elements", "array_selector", 
                   "dynamic_result", "dynamic", "int_result", "float_result", 
                   "string_result", "comparison_list", "comparison", "comp_var", 
                   "lvalue", "rvalue", "break_expression", "literal_t", 
                   "float_t", "int_t", "bool_t", "nil_t", "id", "id_global", 
                   "id_function", "terminator", "else_token", "crlf" ]

    EOF = Token.EOF
    LITERAL=1
    COMMA=2
    SEMICOLON=3
    CRLF=4
    REQUIRE=5
    END=6
    DEF=7
    RETURN=8
    IF=9
    ELSE=10
    ELSIF=11
    UNLESS=12
    WHILE=13
    RETRY=14
    BREAK=15
    FOR=16
    TRUE=17
    FALSE=18
    PLUS=19
    MINUS=20
    MUL=21
    DIV=22
    MOD=23
    EXP=24
    EQUAL=25
    NOT_EQUAL=26
    GREATER=27
    LESS=28
    LESS_EQUAL=29
    GREATER_EQUAL=30
    ASSIGN=31
    PLUS_ASSIGN=32
    MINUS_ASSIGN=33
    MUL_ASSIGN=34
    DIV_ASSIGN=35
    MOD_ASSIGN=36
    EXP_ASSIGN=37
    BIT_AND=38
    BIT_OR=39
    BIT_XOR=40
    BIT_NOT=41
    BIT_SHL=42
    BIT_SHR=43
    AND=44
    OR=45
    NOT=46
    LEFT_RBRACKET=47
    RIGHT_RBRACKET=48
    LEFT_SBRACKET=49
    RIGHT_SBRACKET=50
    NIL=51
    SL_COMMENT=52
    ML_COMMENT=53
    WS=54
    INT=55
    FLOAT=56
    ID=57
    ID_GLOBAL=58
    ID_FUNCTION=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_list(self):
            return self.getTypedRuleContext(rubitoParser.Expression_listContext,0)


        def getRuleIndex(self):
            return rubitoParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = rubitoParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.expression_list(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(rubitoParser.ExpressionContext,0)


        def terminator(self):
            return self.getTypedRuleContext(rubitoParser.TerminatorContext,0)


        def expression_list(self):
            return self.getTypedRuleContext(rubitoParser.Expression_listContext,0)


        def getRuleIndex(self):
            return rubitoParser.RULE_expression_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_list" ):
                listener.enterExpression_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_list" ):
                listener.exitExpression_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_list" ):
                return visitor.visitExpression_list(self)
            else:
                return visitor.visitChildren(self)



    def expression_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = rubitoParser.Expression_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expression_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rubitoParser.LITERAL, rubitoParser.REQUIRE, rubitoParser.DEF, rubitoParser.RETURN, rubitoParser.IF, rubitoParser.UNLESS, rubitoParser.WHILE, rubitoParser.FOR, rubitoParser.TRUE, rubitoParser.FALSE, rubitoParser.BIT_NOT, rubitoParser.NOT, rubitoParser.LEFT_RBRACKET, rubitoParser.NIL, rubitoParser.INT, rubitoParser.FLOAT, rubitoParser.ID, rubitoParser.ID_GLOBAL, rubitoParser.ID_FUNCTION]:
                self.state = 143
                self.expression()
                self.state = 144
                self.terminator(0)
                pass
            elif token in [rubitoParser.SEMICOLON, rubitoParser.CRLF]:
                self.state = 146
                self.terminator(0)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 155
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = rubitoParser.Expression_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression_list)
                    self.state = 149
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 150
                    self.expression()
                    self.state = 151
                    self.terminator(0) 
                self.state = 157
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_definition(self):
            return self.getTypedRuleContext(rubitoParser.Function_definitionContext,0)


        def function_inline_call(self):
            return self.getTypedRuleContext(rubitoParser.Function_inline_callContext,0)


        def require_block(self):
            return self.getTypedRuleContext(rubitoParser.Require_blockContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(rubitoParser.If_statementContext,0)


        def unless_statement(self):
            return self.getTypedRuleContext(rubitoParser.Unless_statementContext,0)


        def rvalue(self):
            return self.getTypedRuleContext(rubitoParser.RvalueContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(rubitoParser.Return_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(rubitoParser.While_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(rubitoParser.For_statementContext,0)


        def getRuleIndex(self):
            return rubitoParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = rubitoParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.function_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.function_inline_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.require_block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 161
                self.if_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 162
                self.unless_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 163
                self.rvalue(0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 164
                self.return_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 165
                self.while_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 166
                self.for_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Global_getContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var_name = None # LvalueContext
            self.op = None # Token
            self.global_name = None # Id_globalContext

        def lvalue(self):
            return self.getTypedRuleContext(rubitoParser.LvalueContext,0)


        def ASSIGN(self):
            return self.getToken(rubitoParser.ASSIGN, 0)

        def id_global(self):
            return self.getTypedRuleContext(rubitoParser.Id_globalContext,0)


        def getRuleIndex(self):
            return rubitoParser.RULE_global_get

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_get" ):
                listener.enterGlobal_get(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_get" ):
                listener.exitGlobal_get(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_get" ):
                return visitor.visitGlobal_get(self)
            else:
                return visitor.visitChildren(self)




    def global_get(self):

        localctx = rubitoParser.Global_getContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_global_get)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            localctx.var_name = self.lvalue()
            self.state = 170
            localctx.op = self.match(rubitoParser.ASSIGN)
            self.state = 171
            localctx.global_name = self.id_global()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Global_setContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.global_name = None # Id_globalContext
            self.op = None # Token
            self.result = None # All_resultContext

        def id_global(self):
            return self.getTypedRuleContext(rubitoParser.Id_globalContext,0)


        def ASSIGN(self):
            return self.getToken(rubitoParser.ASSIGN, 0)

        def all_result(self):
            return self.getTypedRuleContext(rubitoParser.All_resultContext,0)


        def getRuleIndex(self):
            return rubitoParser.RULE_global_set

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_set" ):
                listener.enterGlobal_set(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_set" ):
                listener.exitGlobal_set(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_set" ):
                return visitor.visitGlobal_set(self)
            else:
                return visitor.visitChildren(self)




    def global_set(self):

        localctx = rubitoParser.Global_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_global_set)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            localctx.global_name = self.id_global()
            self.state = 174
            localctx.op = self.match(rubitoParser.ASSIGN)
            self.state = 175
            localctx.result = self.all_result()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Global_resultContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_global(self):
            return self.getTypedRuleContext(rubitoParser.Id_globalContext,0)


        def getRuleIndex(self):
            return rubitoParser.RULE_global_result

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_result" ):
                listener.enterGlobal_result(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_result" ):
                listener.exitGlobal_result(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_result" ):
                return visitor.visitGlobal_result(self)
            else:
                return visitor.visitChildren(self)




    def global_result(self):

        localctx = rubitoParser.Global_resultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_global_result)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.id_global()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_inline_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_call(self):
            return self.getTypedRuleContext(rubitoParser.Function_callContext,0)


        def getRuleIndex(self):
            return rubitoParser.RULE_function_inline_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_inline_call" ):
                listener.enterFunction_inline_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_inline_call" ):
                listener.exitFunction_inline_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_inline_call" ):
                return visitor.visitFunction_inline_call(self)
            else:
                return visitor.visitChildren(self)




    def function_inline_call(self):

        localctx = rubitoParser.Function_inline_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_inline_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.function_call()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Require_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRE(self):
            return self.getToken(rubitoParser.REQUIRE, 0)
